--- a/solo-play/hi/homework8/static/index.html
+++ b/solo-play/hi/homework8/static/index.html
@@ -3,8 +3,7 @@
 
 <head>
     <title>WebDevelopSummit</title>
-    <!-- link 태그는 안 닫아도 됩니다. -->    
-    <link rel="stylesheet" href="myStyle.css"></link>
+    <link rel="stylesheet" href="myStyle.css">
     <script src="Member.js"></script>
     <script src="script.js"></script>
 </head>
