--- a/solo-play/hi/homework10/public/index.html
+++ b/solo-play/hi/homework10/public/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <title>WebDevelopSummit</title>
-    <link rel="stylesheet" href="myStyle.css">
-    <script src="Member.js"></script>
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="stylesheet/myStyle.css">
+    <script src="js/Member.js"></script>
+    <script src="js/script.js"></script>
 </head>
 
 <body>
