implement add api / and call add api from front

--- a/solo-play/hi/homework10/public/index.html
+++ b/solo-play/hi/homework10/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>WebDevelopSummit</title>
     <link rel="stylesheet" href="stylesheet/myStyle.css">
-    <script src="js/Member.js"></script>
+    <script src="js/httpRequest.js"></script>
     <script src="js/script.js"></script>
 </head>
 
